testdata/baselines/reference/submodule/compiler/declarationEmitNameConflicts2.errors.txt
declarationEmitNameConflicts2.ts(11,22): error TS2339: Property 'Y' does not exist on type '{}'.
declarationEmitNameConflicts2.ts(12,22): error TS2339: Property 'Y' does not exist on type '{}'.
declarationEmitNameConflicts2.ts(13,22): error TS2339: Property 'Y' does not exist on type '{}'.
declarationEmitNameConflicts2.ts(14,22): error TS2339: Property 'Y' does not exist on type '{}'.


==== declarationEmitNameConflicts2.ts (4 errors) ====
    module X.Y.base {
        export function f() { }
        export class C { }
        export module M {
            export var v;
        }
        export enum E { }
    }
    
    module X.Y.base.Z {
        export var f = X.Y.base.f; // Should be base.f
                         ~
!!! error TS2339: Property 'Y' does not exist on type '{}'.
        export var C = X.Y.base.C; // Should be base.C
                         ~
!!! error TS2339: Property 'Y' does not exist on type '{}'.
        export var M = X.Y.base.M; // Should be base.M
                         ~
!!! error TS2339: Property 'Y' does not exist on type '{}'.
        export var E = X.Y.base.E; // Should be base.E
                         ~
!!! error TS2339: Property 'Y' does not exist on type '{}'.
    }